@@ -16,3 +16,4 @@ require 'prototypes/wire-tweaks'
 require 'prototypes/wood-tweaks'
 require 'prototypes/entity-tweaks'
 require 'prototypes/quiet-belts'
+require 'prototypes/ghost-tweaks'
