@@ -52,6 +52,7 @@ picker-wire-color-copper=Copper Wire
 picker-wire-color-green=Green Circuit Wire
 picker-wire-color-red=Red Circtuit Wire
 picker-belt-sounds=Belt Sound Modifier
+picker-ghost-tint=Ghost Tint
 
 [mod-setting-description]
 picker-noalt-construction-robots=Hide alt info on construction robots.\nFactorio default: false
@@ -101,6 +102,7 @@ picker-wire-color-copper=Copper wire display settings.
 picker-wire-color-green=Green circuit wire display settings.
 picker-wire-color-red=Red circtuit wire display settings.
 picker-belt-sounds=Belt Sound Modifier.
+picker-ghost-tint=Blueprint/Ghost tint.
 
 [string-mod-setting]
 picker-wire-color-copper-default=Default
