@@ -1,3 +1,4 @@
+local Color = require('__stdlib__/stdlib/utils/color')
 local utility_sprites = data.raw['utility-sprites'].default
 
 -------------------------------------------------------------------------------
@@ -15,6 +16,7 @@ if settings.startup['picker-small-unplugged-icon'].value then
     utility_sprites.electricity_icon_unplugged.filename = '__PickerTweaks__/graphics/electricity-icon-unplugged.png'
     utility_sprites.too_far_from_roboport_icon.filename = '__PickerTweaks__/graphics/too-far-from-roboport-icon.png'
 end
+-- No power, Low power, roboport etc etc
 
 -------------------------------------------------------------------------------
 --[Iondicators]--
@@ -22,9 +24,11 @@ end
 --GFX From "Iondicators" by "KingIonTrueLove" https://mods.factorio.com/mods/ion_cannon_1
 local ion_line = settings.startup['picker-iondicators-line'].value
 local ion_arrow = settings.startup['picker-iondicators-arrow'].value
-if ion_line == 'green' or ion_line == 'yellow' or ion_line == 'blue' or ion_line == 'purple' then
-    utility_sprites.indication_line.filename = '__PickerTweaks__/graphics/iondicators/' .. ion_line .. '-indication-line.png'
+if ion_line ~= 'vanilla' then
+    utility_sprites.indication_line.filename = '__PickerTweaks__/graphics/iondicators/indication-line.png'
+    utility_sprites.indication_line.tint = Color(Color.color[ion_line], 0.5)
 end
-if ion_arrow == 'green' or ion_arrow == 'yellow' or ion_arrow == 'blue' or ion_arrow == 'purple' then
-    utility_sprites.indication_arrow.filename = '__PickerTweaks__/graphics/iondicators/' .. ion_arrow .. '-indication-arrow.png'
+if ion_arrow ~= 'vanilla' then
+    utility_sprites.indication_arrow.filename = '__PickerTweaks__/graphics/iondicators/indication-arrow.png'
+    utility_sprites.indication_arrow.tint = Color(Color.color[ion_arrow], 0.5)
 end
