@@ -14,6 +14,7 @@ Date: ??????
     - Add artillery map reveal option.
     - Add free circuit wires option.
     - Add almost invisible wires option.
+    - Add more blueprinty like blueprint option.
   Removal:
     - Better Color Lamps (PickerSignals).
     - More Virtual Signals (PickerSignals).
